// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renderer:static 1`] = `
<div>
  <div
    class="__AMIS_COMPONENT_CLASS_PREFIX__Panel __AMIS_COMPONENT_CLASS_PREFIX__Panel--default __AMIS_COMPONENT_CLASS_PREFIX__Panel--form"
    data-role="container"
  >
    <div
      class="__AMIS_COMPONENT_CLASS_PREFIX__Panel-heading"
    >
      <h3
        class="__AMIS_COMPONENT_CLASS_PREFIX__Panel-title"
      >
        <span
          class="__AMIS_COMPONENT_CLASS_PREFIX__TplField fr-view"
        >
          <span>
            The form
          </span>
        </span>
      </h3>
    </div>
    <div
      class="__AMIS_COMPONENT_CLASS_PREFIX__Panel-body"
    >
      <form
        class="__AMIS_COMPONENT_CLASS_PREFIX__Form __AMIS_COMPONENT_CLASS_PREFIX__Form--normal"
        novalidate=""
      >
        <input
          style="display: none;"
          type="submit"
        />
        <div
          class="__AMIS_COMPONENT_CLASS_PREFIX__Form-item __AMIS_COMPONENT_CLASS_PREFIX__Form-item--normal bg-white"
          data-amis-name="static"
          data-role="form-item"
        >
          <label
            class="__AMIS_COMPONENT_CLASS_PREFIX__Form-label"
          >
            <span>
              <span
                class="__AMIS_COMPONENT_CLASS_PREFIX__TplField fr-view"
              >
                <span>
                  label
                </span>
              </span>
            </span>
          </label>
          <div
            class="__AMIS_COMPONENT_CLASS_PREFIX__Form-static"
          >
            <div
              class="__AMIS_COMPONENT_CLASS_PREFIX__Form-control is-inline"
            >
              <span
                class="__AMIS_COMPONENT_CLASS_PREFIX__PlainField"
              >
                static
              </span>
            </div>
          </div>
          <span
            class="__AMIS_COMPONENT_CLASS_PREFIX__TplField fr-view __AMIS_COMPONENT_CLASS_PREFIX__Form-description"
          >
            <span>
              static description
            </span>
          </span>
        </div>
        <div
          class="__AMIS_COMPONENT_CLASS_PREFIX__Form-item __AMIS_COMPONENT_CLASS_PREFIX__Form-item--normal"
          data-amis-name="static 1"
          data-role="form-item"
        >
          <div
            class="__AMIS_COMPONENT_CLASS_PREFIX__Form-static"
          >
            <div
              class="__AMIS_COMPONENT_CLASS_PREFIX__Form-control"
            >
              <span
                class="__AMIS_COMPONENT_CLASS_PREFIX__PlainField"
              >
                <span
                  class="text-muted"
                >
                  -
                </span>
              </span>
            </div>
          </div>
        </div>
        <div
          class="__AMIS_COMPONENT_CLASS_PREFIX__Form-item __AMIS_COMPONENT_CLASS_PREFIX__Form-item--normal"
          data-amis-name="static 2"
          data-role="form-item"
        >
          <div
            class="__AMIS_COMPONENT_CLASS_PREFIX__Form-static"
          >
            <div
              class="__AMIS_COMPONENT_CLASS_PREFIX__Form-control"
            >
              <span
                class="__AMIS_COMPONENT_CLASS_PREFIX__PlainField"
              >
                <span
                  class="text-muted"
                >
                  -
                </span>
              </span>
            </div>
          </div>
        </div>
      </form>
    </div>
  </div>
</div>
`;

exports[`Renderer:static-quickEdit-icon 1`] = `
<div>
  <div
    class="__AMIS_COMPONENT_CLASS_PREFIX__Form-item __AMIS_COMPONENT_CLASS_PREFIX__Form-item--normal"
    data-amis-name="static"
    data-role="form-item"
  >
    <label
      class="__AMIS_COMPONENT_CLASS_PREFIX__Form-label"
    >
      <span>
        <span
          class="__AMIS_COMPONENT_CLASS_PREFIX__TplField fr-view"
        >
          <span>
            label
          </span>
        </span>
      </span>
    </label>
    <div
      class="__AMIS_COMPONENT_CLASS_PREFIX__Form-static"
    >
      <div
        class="__AMIS_COMPONENT_CLASS_PREFIX__Field--quickEditable __AMIS_COMPONENT_CLASS_PREFIX__Form-control"
        tabindex="0"
      >
        <span
          class="__AMIS_COMPONENT_CLASS_PREFIX__PlainField"
        >
          static
        </span>
        <button
          class="__AMIS_COMPONENT_CLASS_PREFIX__Button __AMIS_COMPONENT_CLASS_PREFIX__Button--link __AMIS_COMPONENT_CLASS_PREFIX__Button--size-default __AMIS_COMPONENT_CLASS_PREFIX__Field-quickEditBtn"
          tabindex="-1"
          type="button"
        >
          <i
            class="fa fa-search __AMIS_COMPONENT_CLASS_PREFIX__Button-icon fa fa-search"
          />
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:static2 1`] = `
<div>
  <div
    class="__AMIS_COMPONENT_CLASS_PREFIX__Panel __AMIS_COMPONENT_CLASS_PREFIX__Panel--default __AMIS_COMPONENT_CLASS_PREFIX__Panel--form"
    data-role="container"
  >
    <div
      class="__AMIS_COMPONENT_CLASS_PREFIX__Panel-heading"
    >
      <h3
        class="__AMIS_COMPONENT_CLASS_PREFIX__Panel-title"
      >
        <span
          class="__AMIS_COMPONENT_CLASS_PREFIX__TplField fr-view"
        >
          <span>
            The form
          </span>
        </span>
      </h3>
    </div>
    <div
      class="__AMIS_COMPONENT_CLASS_PREFIX__Panel-body"
    >
      <form
        class="__AMIS_COMPONENT_CLASS_PREFIX__Form __AMIS_COMPONENT_CLASS_PREFIX__Form--normal __AMIS_COMPONENT_CLASS_PREFIX__Form--isStatic"
        novalidate=""
      >
        <input
          style="display: none;"
          type="submit"
        />
        <div
          class="__AMIS_COMPONENT_CLASS_PREFIX__Form-item __AMIS_COMPONENT_CLASS_PREFIX__Form-item--normal"
          data-amis-name="a"
          data-role="form-item"
        >
          <label
            class="__AMIS_COMPONENT_CLASS_PREFIX__Form-label"
          >
            <span>
              <span
                class="__AMIS_COMPONENT_CLASS_PREFIX__TplField fr-view"
              >
                <span>
                  a
                </span>
              </span>
            </span>
          </label>
          <div
            class="__AMIS_COMPONENT_CLASS_PREFIX__Form-static __AMIS_COMPONENT_CLASS_PREFIX__Form-control"
          >
            1
          </div>
        </div>
        <div
          class="__AMIS_COMPONENT_CLASS_PREFIX__Form-item __AMIS_COMPONENT_CLASS_PREFIX__Form-item--normal"
          data-amis-name="b"
          data-role="form-item"
        >
          <label
            class="__AMIS_COMPONENT_CLASS_PREFIX__Form-label"
          >
            <span>
              <span
                class="__AMIS_COMPONENT_CLASS_PREFIX__TplField fr-view"
              >
                <span>
                  b
                </span>
              </span>
            </span>
          </label>
          <div
            class="__AMIS_COMPONENT_CLASS_PREFIX__Form-control __AMIS_COMPONENT_CLASS_PREFIX__TextControl"
          >
            <div
              class="__AMIS_COMPONENT_CLASS_PREFIX__TextControl-input"
            >
              <input
                autocomplete="off"
                class=""
                name="b"
                placeholder=""
                size="10"
                type="text"
                value="2"
              />
            </div>
          </div>
        </div>
        <div
          class="__AMIS_COMPONENT_CLASS_PREFIX__Form-item __AMIS_COMPONENT_CLASS_PREFIX__Form-item--normal"
          data-amis-name="c"
          data-role="form-item"
        >
          <label
            class="__AMIS_COMPONENT_CLASS_PREFIX__Form-label"
          >
            <span>
              <span
                class="__AMIS_COMPONENT_CLASS_PREFIX__TplField fr-view"
              >
                <span>
                  c
                </span>
              </span>
            </span>
          </label>
          <div
            class="__AMIS_COMPONENT_CLASS_PREFIX__Form-static __AMIS_COMPONENT_CLASS_PREFIX__Form-control"
          >
            3
          </div>
        </div>
        <div
          class="__AMIS_COMPONENT_CLASS_PREFIX__Form-group __AMIS_COMPONENT_CLASS_PREFIX__Form-group--hor __AMIS_COMPONENT_CLASS_PREFIX__Form-group--normal"
        >
          <div
            class="__AMIS_COMPONENT_CLASS_PREFIX__Form-groupColumn"
          >
            <div
              class="__AMIS_COMPONENT_CLASS_PREFIX__Form-item __AMIS_COMPONENT_CLASS_PREFIX__Form-item--normal"
              data-amis-name="a"
              data-role="form-item"
            >
              <label
                class="__AMIS_COMPONENT_CLASS_PREFIX__Form-label"
              >
                <span>
                  <span
                    class="__AMIS_COMPONENT_CLASS_PREFIX__TplField fr-view"
                  >
                    <span>
                      a
                    </span>
                  </span>
                </span>
              </label>
              <div
                class="__AMIS_COMPONENT_CLASS_PREFIX__Form-static __AMIS_COMPONENT_CLASS_PREFIX__Form-control"
              >
                1
              </div>
            </div>
          </div>
          <div
            class="__AMIS_COMPONENT_CLASS_PREFIX__Form-groupColumn"
          >
            <div
              class="__AMIS_COMPONENT_CLASS_PREFIX__Form-item __AMIS_COMPONENT_CLASS_PREFIX__Form-item--normal"
              data-amis-name="b"
              data-role="form-item"
            >
              <label
                class="__AMIS_COMPONENT_CLASS_PREFIX__Form-label"
              >
                <span>
                  <span
                    class="__AMIS_COMPONENT_CLASS_PREFIX__TplField fr-view"
                  >
                    <span>
                      b
                    </span>
                  </span>
                </span>
              </label>
              <div
                class="__AMIS_COMPONENT_CLASS_PREFIX__Form-control __AMIS_COMPONENT_CLASS_PREFIX__TextControl"
              >
                <div
                  class="__AMIS_COMPONENT_CLASS_PREFIX__TextControl-input"
                >
                  <input
                    autocomplete="off"
                    class=""
                    name="b"
                    placeholder=""
                    size="10"
                    type="text"
                    value="2"
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            class="__AMIS_COMPONENT_CLASS_PREFIX__Form-groupColumn"
          >
            <div
              class="__AMIS_COMPONENT_CLASS_PREFIX__Form-item __AMIS_COMPONENT_CLASS_PREFIX__Form-item--normal"
              data-amis-name="c"
              data-role="form-item"
            >
              <label
                class="__AMIS_COMPONENT_CLASS_PREFIX__Form-label"
              >
                <span>
                  <span
                    class="__AMIS_COMPONENT_CLASS_PREFIX__TplField fr-view"
                  >
                    <span>
                      c
                    </span>
                  </span>
                </span>
              </label>
              <div
                class="__AMIS_COMPONENT_CLASS_PREFIX__Form-static __AMIS_COMPONENT_CLASS_PREFIX__Form-control"
              >
                3
              </div>
            </div>
          </div>
        </div>
        <div
          class="__AMIS_COMPONENT_CLASS_PREFIX__Form-group __AMIS_COMPONENT_CLASS_PREFIX__Form-group--hor __AMIS_COMPONENT_CLASS_PREFIX__Form-group--normal"
        >
          <div
            class="__AMIS_COMPONENT_CLASS_PREFIX__Form-groupColumn"
          >
            <div
              class="__AMIS_COMPONENT_CLASS_PREFIX__Form-item __AMIS_COMPONENT_CLASS_PREFIX__Form-item--normal"
              data-amis-name="a"
              data-role="form-item"
            >
              <label
                class="__AMIS_COMPONENT_CLASS_PREFIX__Form-label"
              >
                <span>
                  <span
                    class="__AMIS_COMPONENT_CLASS_PREFIX__TplField fr-view"
                  >
                    <span>
                      a
                    </span>
                  </span>
                </span>
              </label>
              <div
                class="__AMIS_COMPONENT_CLASS_PREFIX__Form-control __AMIS_COMPONENT_CLASS_PREFIX__TextControl"
              >
                <div
                  class="__AMIS_COMPONENT_CLASS_PREFIX__TextControl-input"
                >
                  <input
                    autocomplete="off"
                    class=""
                    name="a"
                    placeholder=""
                    size="10"
                    type="text"
                    value="1"
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            class="__AMIS_COMPONENT_CLASS_PREFIX__Form-groupColumn"
          >
            <div
              class="__AMIS_COMPONENT_CLASS_PREFIX__Form-item __AMIS_COMPONENT_CLASS_PREFIX__Form-item--normal"
              data-amis-name="b"
              data-role="form-item"
            >
              <label
                class="__AMIS_COMPONENT_CLASS_PREFIX__Form-label"
              >
                <span>
                  <span
                    class="__AMIS_COMPONENT_CLASS_PREFIX__TplField fr-view"
                  >
                    <span>
                      b
                    </span>
                  </span>
                </span>
              </label>
              <div
                class="__AMIS_COMPONENT_CLASS_PREFIX__Form-control __AMIS_COMPONENT_CLASS_PREFIX__TextControl"
              >
                <div
                  class="__AMIS_COMPONENT_CLASS_PREFIX__TextControl-input"
                >
                  <input
                    autocomplete="off"
                    class=""
                    name="b"
                    placeholder=""
                    size="10"
                    type="text"
                    value="2"
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            class="__AMIS_COMPONENT_CLASS_PREFIX__Form-groupColumn"
          >
            <div
              class="__AMIS_COMPONENT_CLASS_PREFIX__Form-item __AMIS_COMPONENT_CLASS_PREFIX__Form-item--normal"
              data-amis-name="c"
              data-role="form-item"
            >
              <label
                class="__AMIS_COMPONENT_CLASS_PREFIX__Form-label"
              >
                <span>
                  <span
                    class="__AMIS_COMPONENT_CLASS_PREFIX__TplField fr-view"
                  >
                    <span>
                      c
                    </span>
                  </span>
                </span>
              </label>
              <div
                class="__AMIS_COMPONENT_CLASS_PREFIX__Form-static __AMIS_COMPONENT_CLASS_PREFIX__Form-control"
              >
                3
              </div>
            </div>
          </div>
        </div>
      </form>
    </div>
  </div>
</div>
`;
